Closed Bug 232059 Opened 22 years ago Closed 22 years ago

installed-chrome.txt shouldn't need to end in a newline

Categories

(Core :: XUL, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.7alpha

People

(Reporter: benjamin, Assigned: benjamin)

Details

Attachments

(1 file, 2 obsolete files)

Currently, installed-chrome.txt has to end in a newline. This sucks, because people often add an entry at the end without thinking to add a newline, and then bitch that the chrome registry is messed up. One-liner to fix coming up.
Comment on attachment 139809 [details] [diff] [review] Don't overwrite the last char, but append bryner, can I get rs= for both chrome registries?
Attachment #139809 - Flags: superreview?(bryner)
Attachment #139809 - Flags: review?(bryner)
Comment on attachment 139809 [details] [diff] [review] Don't overwrite the last char, but append This is not correct, new patch forthcoming.
Attachment #139809 - Attachment is obsolete: true
Attachment #139809 - Flags: superreview?(bryner)
Attachment #139809 - Flags: review?(bryner)
Attachment #139863 - Flags: superreview?(bryner)
Attachment #139863 - Flags: review?(bryner)
Comment on attachment 139863 [details] [diff] [review] allow installed-chrome.txt to not have a final newline Can you attach a patch instead of the full source file?
Attachment #139863 - Flags: superreview?(bryner)
Attachment #139863 - Flags: superreview-
Attachment #139863 - Flags: review?(bryner)
Attachment #139863 - Flags: review-
Attachment #139863 - Attachment is obsolete: true
Attachment #140191 - Flags: superreview?(bryner)
Attachment #140191 - Flags: review?(bryner)
Comment on attachment 140191 [details] [diff] [review] same thing, as patch [grr] Looks fine... please check in the patch for mozilla/chrome as well.
Attachment #140191 - Flags: superreview?(bryner)
Attachment #140191 - Flags: superreview+
Attachment #140191 - Flags: review?(bryner)
Attachment #140191 - Flags: review+
fixed
Status: NEW → RESOLVED
Closed: 22 years ago
QA Contact: shrir → mcsmurf
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.7alpha
Component: XP Toolkit/Widgets: XUL → XUL
QA Contact: bugzilla → xptoolkit.widgets
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: