Bug 232059 - installed-chrome.txt shouldn't need to end in a newline. r+sr=bryner